// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server GET /v2/swaps/:id retrieves a swap from a native swap id 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "fees": [],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": null,
    "totalChunksExecuted": 0,
    "totalInputAmountSwapped": "0",
    "totalOutputAmountSwapped": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap from a vault origin 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
    "txRef": "0xb2dcb9ce8d50f0ab869995fee8482bcf304ffcfe5681ca748f90e34c0ad7b241",
  },
  "depositChannel": {
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "fees": [],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": null,
    "totalChunksExecuted": 0,
    "totalInputAmountSwapped": "0",
    "totalOutputAmountSwapped": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in COMPLETED status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "COMPLETED",
  "swap": {
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "egress": {
      "amount": "4192707216034",
      "scheduledAt": 564000,
      "scheduledBlockIndex": "94-595",
      "sentAt": 624000,
      "sentAtBlockIndex": "104-7",
      "sentTxRef": "104-2",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 1,
    "totalInputAmountSwapped": "4999949999999650000",
    "totalOutputAmountSwapped": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENDING",
  "swap": {
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "egress": {
      "amount": "4192707216034",
      "scheduledAt": 564000,
      "scheduledBlockIndex": "94-595",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 1,
    "totalInputAmountSwapped": "4999949999999650000",
    "totalOutputAmountSwapped": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SENT status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENT",
  "swap": {
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "egress": {
      "amount": "4192707216034",
      "scheduledAt": 564000,
      "scheduledBlockIndex": "94-595",
      "sentTxRef": "0xdeadbeef",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 1,
    "totalInputAmountSwapped": "4999949999999650000",
    "totalOutputAmountSwapped": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap in SWAPPING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SWAPPING",
  "swap": {
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "fees": [
      {
        "amount": "4556242",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "NETWORK",
      },
      {
        "amount": "4999949999999650",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "4506169",
        "asset": "USDC",
        "chain": "Ethereum",
        "type": "LIQUIDITY",
      },
      {
        "amount": "45516860",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "BROKER",
      },
      {
        "amount": "50000000350000",
        "asset": "ETH",
        "chain": "Ethereum",
        "type": "INGRESS",
      },
    ],
    "isDcaSwap": false,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 1,
    "totalInputAmountSwapped": "4999949999999650000",
    "totalOutputAmountSwapped": "4192904666034",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with FillOrKillParams in COMPLETED 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refund": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
    "sentAt": 624000,
    "sentAtBlockIndex": "104-7",
    "sentTxRef": "0xd2398250c9fa869f0eb7659015549ed46178c95cedd444c3539f655068f6a7d9",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "COMPLETED",
  "swap": {
    "currentChunk": {
      "fees": [],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": null,
    "totalChunksExecuted": 0,
    "totalInputAmountSwapped": "0",
    "totalOutputAmountSwapped": "0",
  },
  "swapId": "368",
}
`;

exports[`server GET /v2/swaps/:id retrieves a swap with a refund in SENDING status 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refund": {
    "amount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "SENDING",
  "swap": {
    "currentChunk": {
      "fees": [],
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
    },
    "fees": Any<Array>,
    "isDcaSwap": false,
    "lastExecutedChunk": null,
    "totalChunksExecuted": 0,
    "totalInputAmountSwapped": "0",
    "totalOutputAmountSwapped": "0",
  },
}
`;

exports[`server GET /v2/swaps/:id retrieves mulitple DCA swaps in FAILED status if refund egress fails but swap completes 1`] = `
{
  "deposit": {
    "amount": "5000000000000000000",
    "receivedAt": 552000,
    "receivedBlockIndex": "92-400",
  },
  "depositChannel": {
    "brokerCommissionBps": 0,
    "createdAt": 516000,
    "dcaParams": {
      "chunkIntervalBlocks": 3,
      "numberOfChunks": 10,
    },
    "depositAddress": "0x6aa69332b63bb5b1d7ca5355387edd5624e181f2",
    "estimatedExpiryTime": 1699527060000,
    "fillOrKillParams": {
      "minPrice": "29387358770557187699218413430556141945466.638919302188",
      "refundAddress": "0x541f563237a309b3a61e33bdf07a8930bdba8d99",
      "retryDurationBlocks": 15,
    },
    "isExpired": false,
    "openedThroughBackend": false,
    "srcChainExpiryBlock": "265",
    "srcChainRequiredBlockConfirmations": 2,
  },
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "destChain": "Polkadot",
  "estimatedDurationSeconds": 48,
  "refund": {
    "amount": "999844999999160000",
    "failure": {
      "failedAt": 624000,
      "failedAtBlockIndex": "104-1",
      "mode": "REFUND_OUTPUT_TOO_SMALL",
      "reason": {
        "message": "The amount is below the minimum egress amount.",
        "name": "ethereumIngressEgress.BelowEgressDustLimit",
      },
    },
    "ignoredAmount": "999844999999160000",
    "scheduledAt": 564000,
    "scheduledBlockIndex": "94-594",
  },
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "state": "FAILED",
  "swap": {
    "currentChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "egress": {
      "amount": "4192707216034",
      "scheduledAt": 564000,
      "scheduledBlockIndex": "94-595",
      "sentAt": 624000,
      "sentAtBlockIndex": "104-7",
      "sentTxRef": "104-2",
    },
    "fees": Any<Array>,
    "isDcaSwap": true,
    "lastExecutedChunk": {
      "executedAt": 564000,
      "executedBlockIndex": "94-594",
      "fees": Any<Array>,
      "retryCount": 0,
      "scheduledAt": 552000,
      "scheduledBlockIndex": "92-399",
      "swapInputAmount": "4999949999999650000",
      "swapOutputAmount": "4192904666034",
    },
    "totalChunksExecuted": 2,
    "totalInputAmountSwapped": "9999899999999300000",
    "totalOutputAmountSwapped": "8385809332068",
  },
}
`;
